--- a/index.html
+++ b/index.html
@@ -17,22 +17,35 @@
 
     <style type="text/css">
         #mynetwork {
-            width: 1024px;
-            height: 768px;
-            border: 2px solid gray;
-            background-color:#333333;
+            /*width: 1024px;*/
+            /*height: 768px;*/
+            /*border: 2px solid gray;*/
+            background-color:#E57373;
+        }
+
+        html,body{height:100%;}
+
+        .fill{
+            width:100%;
+            height:100%;
+            min-height:100%;
+            padding:10px;
+            color:#efefef;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <!--<div class="container fill">
         <div id="mynetwork"></div>
 
         <footer class="footer">
             <p>&copy; 2016 Company, Inc.</p>
         </footer>
 
-    </div> <!-- /container -->
+    </div> &lt;!&ndash; /container &ndash;&gt;-->
+
+    <div class="fill" id="mynetwork">
+    </div>
 
     <script src="js/main.js"></script>
 
