--- a/viz.html
+++ b/viz.html
@@ -27,17 +27,57 @@
         <div class="row">
             <!-- sidebar -->
             <div class="column col-sm-3" id="sidebar">
-                <a class="logo" href="#">B</a>
+                <div class="sidebar-top">
+                    <img src="images/pro_pic.jpg" alt="" class="img-circle img-fluid">
+                    <h2 align="center">Mesbahul Islam</h2>
+                    <p align="center">
+                        <q>
+                            I am a passionate full-stack software developer with 6 years of professional experiences in software
+                            design & development. I have good understanding and hands on experiences in wide areas of programming languages.
+                        </q>
+                    </p>
+                </div>
+                <div class="sidebar-contact" align="center">
+                    <p>
+                    <h5>Contact:</h5>
+                    <span><i class="fa fa-phone fa-fw"></i> +358 46 8828076</span><br>
+                    <span><i class="fa fa-envelope fa-fw"></i> mesbahul.cse.buet@gmail.com</span>
+                    </p>
+
+                    <p>
+                    <h5>Follow me on:</h5>
+                    <a class="btn btn-social-icon btn-linkedin" href="https://fi.linkedin.com/in/mesbahul">
+                        <i class="fa fa-linkedin-square fa-3x"></i>
+                    </a>
+
+                    <a class="btn btn-social" href="https://twitter.com/meislam87">
+                        <i class="fa fa-twitter-square fa-3x"></i>
+                    </a>
+
+                    <a class="btn btn-social" href="https://plus.google.com/u/0/100476133025676531386">
+                        <i class="fa fa-google-plus-square fa-3x"></i>
+                    </a>
+                    </p>
+                </div>
                 <ul class="nav">
                     <li class="active"><a href="#featured">Featured</a>
                     </li>
                     <li><a href="#stories">Stories</a>
                     </li>
-                </ul>
-                <ul class="nav hidden-xs" id="sidebar-footer">
                     <li>
-                        <a href="http://www.bootply.com"><h3>Basis</h3>Made with <i
-                                class="glyphicon glyphicon-heart-empty"></i> by Bootply</a>
+                        <a href="#">Resume</a>
+                    </li>
+                    <li>
+                        <a href="#">Profile Visualization</a>
+                    </li>
+                    <li>
+                        <a href="#">Work Experience</a>
+                    </li>
+                    <li>
+                        <a href="#">Projects</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Me</a>
                     </li>
                 </ul>
             </div>
@@ -87,71 +127,6 @@
                                 <h4><span class="label label-default">searchenginewatch.com</span></h4>
                                 <h4>
                                     <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/men/86.jpg"
-                                        class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="row divider">
-                            <div class="col-sm-12">
-                                <hr>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-10">
-                                <h3>14 Useful Sites for Designers</h3>
-                                <h4><span class="label label-default">devgarage.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">2 days ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/men/19.jpg"
-                                        class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="row divider">
-                            <div class="col-sm-12">
-                                <hr>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-10">
-                                <h3>Bootstrap Builders Get Their Own Playground</h3>
-                                <h4><span class="label label-default">bootply.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">3 days ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/women/17.jpg" class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="row divider">
-                            <div class="col-sm-12">
-                                <hr>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-10">
-                                <h3>How to: Another Fantastical Article</h3>
-                                <h4><span class="label label-default">bootply.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">4 days ago • <a href="#" class="text-muted">Read More</a>
                                     </small>
                                 </h4>
                             </div>
@@ -235,13 +210,6 @@
                         </div>
 
                         <hr>
-
-                        <h3 class="text-center">
-                            <a href="http://bootply.com/86704" target="ext">Made with Bootply</a>
-                        </h3>
-
-                        <hr>
-
 
                     </div><!-- /col-9 -->
                 </div><!-- /padding -->
