--- a/viz.html
+++ b/viz.html
@@ -39,32 +39,29 @@
                 </div>
                 <div class="sidebar-contact" align="center">
                     <p>
-                    <h5>Contact:</h5>
-                    <span><i class="fa fa-phone fa-fw"></i> +358 46 8828076</span><br>
-                    <span><i class="fa fa-envelope fa-fw"></i> mesbahul.cse.buet@gmail.com</span>
+                        <h5>Contact:</h5>
+                        <span><i class="fa fa-phone fa-fw"></i> +358 46 8828076</span><br>
+                        <span><i class="fa fa-envelope fa-fw"></i> mesbahul.cse.buet@gmail.com</span>
                     </p>
 
-                    <p>
-                    <h5>Follow me on:</h5>
-                    <a class="btn btn-social-icon btn-linkedin" href="https://fi.linkedin.com/in/mesbahul">
-                        <i class="fa fa-linkedin-square fa-3x"></i>
-                    </a>
+                    <!--<p>
+                        <h5>Follow me on:</h5>
+                        <a class="btn btn-social-icon btn-linkedin" href="https://fi.linkedin.com/in/mesbahul">
+                            <i class="fa fa-linkedin-square fa-3x"></i>
+                        </a>
 
-                    <a class="btn btn-social" href="https://twitter.com/meislam87">
-                        <i class="fa fa-twitter-square fa-3x"></i>
-                    </a>
+                        <a class="btn btn-social" href="https://twitter.com/meislam87">
+                            <i class="fa fa-twitter-square fa-3x"></i>
+                        </a>
 
-                    <a class="btn btn-social" href="https://plus.google.com/u/0/100476133025676531386">
-                        <i class="fa fa-google-plus-square fa-3x"></i>
-                    </a>
-                    </p>
+                        <a class="btn btn-social" href="https://plus.google.com/u/0/100476133025676531386">
+                            <i class="fa fa-google-plus-square fa-3x"></i>
+                        </a>
+                    </p>-->
                 </div>
-                <ul class="nav">
-                    <li class="active"><a href="#featured">Featured</a>
-                    </li>
-                    <li><a href="#stories">Stories</a>
-                    </li>
-                    <li>
+                <hr>
+                <ul class="sidebar-nav">
+                    <li class="sidebar-nav-active">
                         <a href="#">Resume</a>
                     </li>
                     <li>
@@ -87,125 +84,65 @@
             <div class="column col-sm-9" id="main">
                 <div class="padding">
                     <div class="full col-sm-9">
-
                         <!-- content -->
 
-                        <div class="col-sm-12" id="featured">
-                            <div class="page-header text-muted">
-                                Featured
-                            </div>
-                        </div>
-
-                        <!--/top story-->
-                        <div class="row">
-                            <div class="col-sm-10">
-                                <h3>This is Some Awesome Featured Content</h3>
-                                <h4><span class="label label-default">techvisually.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/men/19.jpg"
-                                        class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12" id="stories">
+                        <div class="col-sm-12">
                             <div class="page-header text-muted divider">
-                                Top Stories
+                                <span class="section-title-background">Summary</span>
                             </div>
                         </div>
 
+                        <div class="col-sm-12">
+                            <div class="page-header text-muted divider">
+                                <span class="section-title-background">Professional Experience</span>
+                            </div>
+                        </div>
 
-                        <!--/stories-->
+                        <div class="col-sm-12">
+                            <div class="page-header text-muted divider">
+                                <span class="section-title-background">Technical Skills</span>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12">
+                            <div class="page-header text-muted divider">
+                                <span class="section-title-background">Tools & Frameworks</span>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12">
+                            <div class="page-header text-muted divider">
+                                <span class="section-title-background">Academic Background</span>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-12">
+                            <div class="page-header text-muted divider">
+                                Connect with Me
+                            </div>
+                        </div>
+
                         <div class="row">
-                            <div class="col-sm-10">
-                                <h3>Dramatically Raise the Value of Any Piece of Content</h3>
-                                <h4><span class="label label-default">searchenginewatch.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">1 hour ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-2">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/men/86.jpg"
-                                        class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="row divider">
                             <div class="col-sm-12">
-                                <hr>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-9">
-                                <h3>Another Fantastical Article of Interest</h3>
-                                <h4><span class="label label-default">bootply.com</span></h4>
-                                <h4>
-                                    <small class="text-muted">4 days ago • <a href="#" class="text-muted">Read More</a>
-                                    </small>
-                                </h4>
-                            </div>
-                            <div class="col-sm-3">
-                                <a href="#" class="pull-right"><img
-                                        src="http://api.randomuser.me/portraits/thumb/women/17.jpg" class="img-circle"></a>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-12">
-                            <div class="page-header text-muted divider">
-                                Up Next
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-4 text-center">
-                                <h4>Related 1</h4>
-                                <a href="#"><img src="//placehold.it/400/f0f0f0" class="img-respsonsive img-circle"></a>
-                            </div>
-                            <div class="col-sm-4 text-center">
-                                <h4>Related 2</h4>
-                                <a href="#"><img src="//placehold.it/400/f0f0f0" class="img-respsonsive img-circle"></a>
-                            </div>
-                            <div class="col-sm-4 text-center">
-                                <h4>Related 3</h4>
-                                <a href="#"><img src="//placehold.it/400/f0f0f0" class="img-respsonsive img-circle"></a>
-                            </div>
-                        </div>
-
-
-                        <div class="col-sm-12">
-                            <div class="page-header text-muted divider">
-                                Connect with Us
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <a href="#">Twitter</a>
+                                <a class="btn btn-social-icon btn-linkedin" href="https://fi.linkedin.com/in/mesbahul">
+                                    <i class="fa fa-linkedin-square fa-3x"></i>
+                                </a>
                                 <small class="text-muted">|</small>
-                                <a href="#">Facebook</a>
+                                <a class="btn btn-social" href="https://twitter.com/meislam87">
+                                    <i class="fa fa-twitter-square fa-3x"></i>
+                                </a>
                                 <small class="text-muted">|</small>
-                                <a href="#">Google+</a>
+                                <a class="btn btn-social" href="https://plus.google.com/u/0/100476133025676531386">
+                                    <i class="fa fa-google-plus-square fa-3x"></i>
+                                </a>
                             </div>
                         </div>
 
                         <hr>
 
                         <div class="row" id="footer">
-                            <div class="col-sm-6">
-
-                            </div>
-                            <div class="col-sm-6">
-                                <p>
-                                    <a href="#" class="pull-right">©Copyright Inc.</a>
-                                </p>
+                            <div class="col-sm-12">
+                                <p><a href="#" class="pull-right">©Copyright 2016.</a></p>
                             </div>
                         </div>
 
